--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,7 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+
 development:
   adapter: sqlite3
   database: db/development.sqlite3
@@ -12,6 +13,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
 test:
   adapter: sqlite3
   database: db/test.sqlite3
@@ -19,7 +21,11 @@ test:
   timeout: 5000
 
 production:
-  adapter: mysql
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: javafiddle
   pool: 5
+  username: root
+  password: GammaMonkey_33
+  socket: /tmp/mysql.sock
   timeout: 5000
