Classes are running. Issue with invalid magic numbers fixed :)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,3 +55,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Custom mime types
+#mimetype.bin=text/plain; charset=x-user-defined
