Trying to get database to connect. Swiched in memdb

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,10 +22,23 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.url="jdbc:postgresql://localhost:5432/javafiddle"
-db.default.driver=org.postgresql.Driver
-db.default.user=postgres
-db.default.password=muggycunt
+#db.default.url="jdbc:postgresql://localhost:5432/javafiddle"
+#db.default.driver=org.postgresql.Driver
+#db.default.user=postgres
+#db.default.password=muggycunt
+
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
+db.default.user=sa
+db.default.password=secret
+db.default.autocommit=true
+db.default.partitionCount=5
+
+db.default.connectionTimeout=2 seconds
+db.default.initSQL="SELECT 1"
+
+db.default.logStatements=true
+
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
